# moth-devel

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  setup.cfg
.github/workflows/: build+test.yml  build.yml  test.yml
contrib/python/: Containerfile  MANIFEST.in  setup.cfg  setup.py  tox.ini
contrib/python/moth/: __init__.py  moth.py
contrib/python/test/: test_moth.py
lib/python/: setup.cfg  setup.py  tox.ini
lib/python/moth/: __init__.py  hexdump.py  moth.py
lib/python/test/: test_moth.py
puzzles/python/1/: puzzle.md
puzzles/python/2/: mkpuzzle
python/: mkpuzzle
python/moth/: __init__.py  __main__.py  hexdump.py
theme/: index.html  scoreboard.html
theme/css/: moth.css  puzzle.css
theme/dumper/: dumper.css  dumper.mjs  index.html
theme/reportcard/: index.html  reportcard.mjs
theme/scoreboard/: class.html  class.js  histogram.html  histogram.js  index.html  scoreboard.css  scoreboard.mjs
theme/scripts/: codejar.mjs  common.mjs  moth.mjs  puzzle.mjs  workspace.mjs
theme/scripts/workers/: python.mjs
