[metadata]
name = moth
version = 0.0.1
author = John Donaldson
author_email = donaldson8@llnl.gov
description = MOTH puzzle building tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dirtbags/moth-dev
project_urls =
    Bug Tracker = https://github.com/dirtbags/moth-dev/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = python
packages = find:
python_requires = >=3.6

[options.packages.find]
where = python

[nosetests]
with_coverage=1
cover_package=moth
cover_branches=1

[flake8]
# flake8 is an automated code formatting pedant.
# Use it, please.
#
#     python3 -m flake8 .
#
ignore = E501
exclude = .git
